[fix] z-index on ribbon (outer div)

--- a/beercoin/static/css/main.css
+++ b/beercoin/static/css/main.css
@@ -128,7 +128,7 @@ footer { padding-top: 10px }
   position: absolute;
   overflow: hidden;
   top: 0;
-  z-index: 9999;
+  z-index: -1;
 }
 
 .github-fork-ribbon-wrapper.fixed {
